# fintech_hw6_image_resizer

./: .gitignore  Makefile  README.md  app.dockerfile  docker-compose.yml  pyproject.toml  redis.conf  setup.cfg  start_workers.sh  workers.dockerfile
app/: .env  app.py  logger.py  redis_db.py  settings.py
app/resizer/: .env  images.py  resizer.py  routes.py  rqueue.py  schemas.py  settings.py  utils.py
tests/: conftest.py
tests/resizer/: conftest.py  test_resizer.py  test_routes.py  test_routes_tasks_get.py  test_routes_tasks_image_get.py  test_routes_tasks_post.py
